A bunch of new look and feel changes, plus a whole bunch of bug fixes in the contact list stuff; have some extensions to put in there but haven't been able to yet because so much is screwed up; there are a few things still broken in the Contact List area of the Marketing Manager, but committing this to have a check point and because Al just sent a bunch of patches which I think are now going be a nightmare to merge...
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5650 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/framework/images/webapp/images/maincss.css
+++ b/framework/images/webapp/images/maincss.css
@@ -328,7 +328,7 @@ font-weight: bold;
 text-decoration: none;
 background: white;
 border: #999999 solid 1px;
-margin: 2px 5px 2px 5px;
+margin: 2px 2px 2px 2px;
 padding: 1px 4px 1px 4px;
 }
 
